src/reporting/snapshots/feotest__reporting__verdict_xml__tests__xml_full_record.snap
---
source: src/reporting/verdict_xml.rs
expression: xml
---
<?xml version="1.0" encoding="UTF-8"?>
<verdict-record xmlns="http://mavai.org/verdict/1.0" version="1.7" methodology-version="1.5.0" timestamp="2026-04-19T10:00:00Z" correlation-id="suite-run-42" generator="feotest/0.2.0">
  <identity use-case-id="full-service" test-name="test_everything"/>
  <execution planned-samples="1000" samples-executed="1000" successes="933" failures="67" elapsed-ms="500" intent="VERIFICATION" confidence="0.95"/>
  <functional successes="933" failures="67" pass-rate="0.9330">
    <failure-distribution>
      <check name="parse" count="34"/>
      <check name="content" count="33"/>
    </failure-distribution>
  </functional>
  <statistics confidence-level="0.9500" standard-error="0.0079" wilson-lower="0.9188" threshold="0.9330" threshold-origin="EMPIRICAL" size-at-assumed-common-rate="0.04035331825610084"/>
  <covariates aligned="true"/>
  <provenance origin="EMPIRICAL" spec-filename="full-service.yaml" contract-ref="SLA v2.0 §3">
    <expiration status="VALID" expires-at="2026-12-31T23:59:59Z" requires-warning="false"/>
  </provenance>
  <baseline source-file="full-service.yaml" generated-at="2026-03-01T08:00:00Z" samples="1000" baseline-rate="0.9510" derived-threshold="0.9330"/>
  <termination reason="COMPLETED"/>
  <cost total-time-ms="500" total-tokens="1000" avg-time-per-sample-ms="0" avg-tokens-per-sample="1"/>
  <warnings>
    <warning code="BASELINE_AGING">Baseline is 49 days old</warning>
  </warnings>
  <pacing max-rps="5" max-rpm="0" max-concurrent="1" effective-min-delay-ms="200" effective-concurrency="1" effective-rps="5"/>
  <environment>
    <entry key="runtime" value="tokio"/>
    <entry key="region" value="us-east-1"/>
  </environment>
  <per-criterion>
    <criterion id="result" verdict="PASS" pass="933" fail="67" inconclusive="0" total="1000" observed-rate="0.9330" threshold="0.9330" decision-rule="regression/fisher" decision-rule-version="1"/>
    <composite value="PASS"/>
  </per-criterion>
  <verdict value="PASS" decision-rule="regression/fisher" decision-rule-version="1" reason="933 of 1000 &gt;= cutoff 933 (regression/fisher)"/>
</verdict-record>
