src/reporting/snapshots/feotest__reporting__verdict_xml__tests__xml_refused_record.snap
---
source: src/reporting/verdict_xml.rs
expression: xml
---
<?xml version="1.0" encoding="UTF-8"?>
<verdict-record xmlns="http://mavai.org/verdict/1.0" version="1.7" methodology-version="1.5.0" timestamp="2026-04-01T12:00:00Z" generator="feotest/0.3.0">
  <identity use-case-id="offer-extraction"/>
  <execution planned-samples="200" samples-executed="0" successes="0" failures="0" elapsed-ms="0" intent="VERIFICATION" confidence="0.95"/>
  <covariates aligned="true"/>
  <termination reason="CONFIGURATION_REFUSED" detail="the test (200 samples) is larger than its baseline (100 trials)"/>
  <cost total-time-ms="0" total-tokens="0" avg-time-per-sample-ms="0" avg-tokens-per-sample="0"/>
  <verdict configuration-error="TEST_LARGER_THAN_BASELINE COMPLIANCE_INFEASIBLE" reason="configuration refused: TEST_LARGER_THAN_BASELINE COMPLIANCE_INFEASIBLE"/>
</verdict-record>
