src/reporting/snapshots/feotest__reporting__verdict_xml__tests__xml_suite_envelope.snap
---
source: src/reporting/verdict_xml.rs
expression: suite
---
<?xml version="1.0" encoding="UTF-8"?>
<verdict-suite xmlns="http://mavai.org/verdict/1.0" timestamp="2026-04-01T12:00:00Z">
<verdict-record xmlns="http://mavai.org/verdict/1.0" version="1.7" methodology-version="1.5.0" timestamp="2026-04-01T12:00:00Z" generator="feotest/0.3.0">
  <identity use-case-id="my-service" test-name="test_translation"/>
  <execution planned-samples="100" samples-executed="100" successes="97" failures="3" elapsed-ms="500" intent="VERIFICATION" confidence="0.95"/>
  <functional successes="97" failures="3" pass-rate="0.9700">
    <failure-distribution>
      <check name="parse" count="2"/>
      <check name="content" count="1"/>
    </failure-distribution>
  </functional>
  <statistics confidence-level="0.9500" standard-error="0.0171" wilson-lower="0.9273" threshold="0.9100" threshold-origin="EMPIRICAL" size-at-assumed-common-rate="0.033967392625028556"/>
  <covariates aligned="true"/>
  <provenance origin="EMPIRICAL" spec-filename="my-service.yaml"/>
  <baseline source-file="my-service.yaml" generated-at="2026-03-27T10:00:00Z" samples="1000" baseline-rate="0.9510" derived-threshold="0.9100"/>
  <termination reason="COMPLETED"/>
  <cost total-time-ms="500" total-tokens="1000" avg-time-per-sample-ms="5" avg-tokens-per-sample="10"/>
  <per-criterion>
    <criterion id="result" verdict="PASS" pass="97" fail="3" inconclusive="0" total="100" observed-rate="0.9700" threshold="0.9100" decision-rule="regression/fisher" decision-rule-version="1" required-pass="91"/>
    <composite value="PASS"/>
  </per-criterion>
  <verdict value="PASS" decision-rule="regression/fisher" decision-rule-version="1" reason="97 of 100 &gt;= cutoff 91 (regression/fisher)"/>
</verdict-record>

<verdict-record xmlns="http://mavai.org/verdict/1.0" version="1.7" methodology-version="1.5.0" timestamp="2026-04-01T12:00:00Z" generator="feotest/0.3.0">
  <identity use-case-id="my-service" test-name="test_accuracy"/>
  <execution planned-samples="100" samples-executed="100" successes="80" failures="20" elapsed-ms="500" intent="VERIFICATION" confidence="0.95"/>
  <functional successes="80" failures="20" pass-rate="0.8000">
    <failure-distribution>
      <check name="parse" count="10"/>
      <check name="content" count="10"/>
    </failure-distribution>
  </functional>
  <statistics confidence-level="0.9500" standard-error="0.0400" wilson-lower="0.7267" threshold="0.9100" threshold-origin="EMPIRICAL" size-at-assumed-common-rate="0.033967392625028556"/>
  <covariates aligned="true"/>
  <termination reason="COMPLETED"/>
  <cost total-time-ms="500" total-tokens="1000" avg-time-per-sample-ms="5" avg-tokens-per-sample="10"/>
  <per-criterion>
    <criterion id="result" verdict="FAIL" pass="80" fail="20" inconclusive="0" total="100" observed-rate="0.8000" threshold="0.9100" decision-rule="regression/fisher" decision-rule-version="1" required-pass="91"/>
    <composite value="FAIL"/>
  </per-criterion>
  <verdict value="FAIL" decision-rule="regression/fisher" decision-rule-version="1" reason="80 of 100 &lt; cutoff 91 (regression/fisher)"/>
</verdict-record>

</verdict-suite>
