src/reporting/snapshots/feotest__reporting__verdict_xml__tests__xml_with_advisory_latency.snap
---
source: src/reporting/verdict_xml.rs
expression: xml
---
<?xml version="1.0" encoding="UTF-8"?>
<verdict-record xmlns="http://mavai.org/verdict/1.0" version="1.8" methodology-version="1.6.0" timestamp="2026-04-01T12:00:00Z" generator="feotest/0.4.0">
  <identity use-case-id="latency-service" test-name="test_response_time"/>
  <execution planned-samples="100" samples-executed="100" successes="97" failures="3" elapsed-ms="500" intent="VERIFICATION" confidence="0.95"/>
  <functional successes="97" failures="3" pass-rate="0.9700">
    <failure-distribution>
      <check name="parse" count="2"/>
      <check name="content" count="1"/>
    </failure-distribution>
  </functional>
  <latency successful-samples="93" verdict="FAIL" mode="advisory">
    <observed>
      <percentile label="p90" value-ms="690"/>
    </observed>
    <evaluations>
      <evaluation percentile="p90" observed-ms="690" threshold-ms="600" provenance="explicit" status="FAIL" decision-rule="latency/compliance-exact-binomial" decision-rule-version="1"/>
    </evaluations>
  </latency>
  <statistics confidence-level="0.9500" standard-error="0.0171" wilson-lower="0.9273" threshold="0.9100" threshold-origin="EMPIRICAL" size-at-assumed-common-rate="0.033967392625028556"/>
  <covariates aligned="true"/>
  <termination reason="COMPLETED"/>
  <cost total-time-ms="500" total-tokens="1000" avg-time-per-sample-ms="5" avg-tokens-per-sample="10"/>
  <per-criterion>
    <criterion id="result" verdict="PASS" pass="97" fail="3" inconclusive="0" total="100" observed-rate="0.9700" threshold="0.9100" decision-rule="regression/fisher" decision-rule-version="1" required-pass="91"/>
    <composite value="PASS" mode="enforced"/>
  </per-criterion>
  <verdict value="PASS" decision-rule="regression/fisher" decision-rule-version="1" reason="97 of 100 &gt;= cutoff 91 (regression/fisher); latency advisory"/>
</verdict-record>
