src/reporting/snapshots/feotest__reporting__verdict_xml__tests__xml_with_correlation_id.snap
---
source: src/reporting/verdict_xml.rs
expression: xml
---
<?xml version="1.0" encoding="UTF-8"?>
<verdict-record xmlns="http://mavai.org/verdict/1.0" version="1.8" methodology-version="1.6.0" timestamp="2026-04-19T10:00:00Z" correlation-id="run-20260419-abc123" generator="feotest/0.3.1">
  <identity use-case-id="correlated-service"/>
  <execution planned-samples="50" samples-executed="50" successes="48" failures="2" elapsed-ms="500" intent="VERIFICATION" confidence="0.95"/>
  <functional successes="48" failures="2" pass-rate="0.9600"/>
  <covariates aligned="true"/>
  <termination reason="COMPLETED"/>
  <cost total-time-ms="500" total-tokens="1000" avg-time-per-sample-ms="10" avg-tokens-per-sample="20"/>
  <per-criterion>
    <criterion id="result" verdict="PASS" pass="48" fail="2" inconclusive="0" total="50" observed-rate="0.9600"/>
    <composite value="PASS" mode="enforced"/>
  </per-criterion>
  <verdict value="PASS" reason="48 of 50 observed"/>
</verdict-record>
