src/reporting/snapshots/feotest__reporting__verdict_xml__tests__xml_with_environment.snap
---
source: src/reporting/verdict_xml.rs
expression: xml
---
<?xml version="1.0" encoding="UTF-8"?>
<verdict-record xmlns="http://mavai.org/verdict/1.0" version="1.7" methodology-version="1.5.0" timestamp="2026-04-19T10:00:00Z" generator="feotest/0.2.0">
  <identity use-case-id="env-service"/>
  <execution planned-samples="50" samples-executed="50" successes="50" failures="0" elapsed-ms="500" intent="VERIFICATION" confidence="0.95"/>
  <functional successes="50" failures="0" pass-rate="1.0000"/>
  <covariates aligned="true"/>
  <termination reason="COMPLETED"/>
  <cost total-time-ms="500" total-tokens="1000" avg-time-per-sample-ms="10" avg-tokens-per-sample="20"/>
  <environment>
    <entry key="cloud_provider" value="aws"/>
    <entry key="region" value="eu-west-1"/>
    <entry key="instance_type" value="m5.large"/>
  </environment>
  <per-criterion>
    <criterion id="result" verdict="PASS" pass="50" fail="0" inconclusive="0" total="50" observed-rate="1.0000"/>
    <composite value="PASS"/>
  </per-criterion>
  <verdict value="PASS" reason="50 of 50 observed"/>
</verdict-record>
