src/reporting/snapshots/feotest__reporting__verdict_xml__tests__xml_with_expiration.snap
---
source: src/reporting/verdict_xml.rs
expression: xml
---
<?xml version="1.0" encoding="UTF-8"?>
<verdict-record xmlns="http://mavai.org/verdict/1.0" version="1.7" methodology-version="1.5.0" timestamp="2026-04-19T10:00:00Z" generator="feotest/0.3.1">
  <identity use-case-id="aging-service"/>
  <execution planned-samples="100" samples-executed="100" successes="92" failures="8" elapsed-ms="500" intent="VERIFICATION" confidence="0.95"/>
  <functional successes="92" failures="8" pass-rate="0.9200"/>
  <covariates aligned="true"/>
  <provenance origin="EMPIRICAL" spec-filename="aging-service.yaml">
    <expiration status="EXPIRING_SOON" expires-at="2026-05-01T00:00:00Z" requires-warning="true"/>
  </provenance>
  <termination reason="COMPLETED"/>
  <cost total-time-ms="500" total-tokens="1000" avg-time-per-sample-ms="5" avg-tokens-per-sample="10"/>
  <per-criterion>
    <criterion id="result" verdict="PASS" pass="92" fail="8" inconclusive="0" total="100" observed-rate="0.9200"/>
    <composite value="PASS"/>
  </per-criterion>
  <verdict value="PASS" reason="92 of 100 observed"/>
</verdict-record>
